tests/snapshots/semantic_ast__semantic_bare_ast.snap
---
source: tests/integration/semantic_ast/semantic_ast_projection_and_bare_snapshot.rs
expression: doc.to_bare()
---
Document {
    ann: (),
    properties: [],
    archive_locations: [],
    metadata: [
        Keyword {
            ann: (),
            key: "TITLE",
            optional: None,
            value: " Demo",
            parsed: [
                Object {
                    ann: (),
                    data: Plain(
                        "Demo",
                    ),
                },
            ],
            attributes: [],
        },
    ],
    filetags: [],
    tag_definitions: [],
    export_settings: ExportSettings {
        select_tags: [],
        exclude_tags: [],
        headline_levels: None,
        special_strings: None,
        expand_entities: None,
    },
    link_abbreviations: [],
    includes: [],
    macro_definitions: [],
    targets: [
        TargetDefinition {
            ann: (),
            kind: Headline,
            key: "Heading",
            value: "Heading",
            raw: "Heading",
            alias: [
                Object {
                    ann: (),
                    data: Plain(
                        "Heading ",
                    ),
                },
            ],
        },
        TargetDefinition {
            ann: (),
            kind: CustomId,
            key: "#heading-id",
            value: "heading-id",
            raw: "heading-id",
            alias: [
                Object {
                    ann: (),
                    data: Plain(
                        "Heading ",
                    ),
                },
            ],
        },
    ],
    footnotes: [],
    children: [
        Element {
            ann: (),
            affiliated_keywords: [],
            data: Keyword(
                Keyword {
                    ann: (),
                    key: "TITLE",
                    optional: None,
                    value: " Demo",
                    parsed: [
                        Object {
                            ann: (),
                            data: Plain(
                                "Demo",
                            ),
                        },
                    ],
                    attributes: [],
                },
            ),
        },
    ],
    sections: [
        Section {
            ann: (),
            body_ann: Some(
                (),
            ),
            level: 1,
            properties: [
                Property {
                    ann: (),
                    key: "CUSTOM_ID",
                    value: "heading-id",
                    duration: None,
                },
            ],
            effective_properties: [
                Property {
                    ann: (),
                    key: "CUSTOM_ID",
                    value: "heading-id",
                    duration: None,
                },
            ],
            archive: ArchiveState {
                archived: false,
                has_archive_tag: false,
                property_location: None,
                keyword_location: None,
            },
            attachment: AttachmentState {
                has_attach_tag: false,
                directory: None,
            },
            todo: Some(
                TodoKeyword {
                    state: Todo,
                    name: "TODO",
                },
            ),
            is_comment: false,
            priority: Priority {
                cookie: None,
                effective: Letter(
                    'B',
                ),
            },
            title: [
                Object {
                    ann: (),
                    data: Plain(
                        "Heading ",
                    ),
                },
            ],
            raw_title: "Heading ",
            anchor: Some(
                "heading-id",
            ),
            tags: [
                "work",
            ],
            effective_tags: [
                "work",
            ],
            planning: Planning {
                deadline: None,
                scheduled: Some(
                    Timestamp {
                        kind: Active,
                        raw: "<2026-04-30 Thu>",
                        is_range: false,
                        start: Some(
                            TimestampMoment {
                                year: 2026,
                                month: 4,
                                day: 30,
                                day_name: Some(
                                    "Thu",
                                ),
                                hour: None,
                                minute: None,
                            },
                        ),
                        end: None,
                        repeater: None,
                        warning: None,
                    },
                ),
                closed: None,
            },
            children: [
                Element {
                    ann: (),
                    affiliated_keywords: [],
                    data: Paragraph(
                        [
                            Object {
                                ann: (),
                                data: Plain(
                                    "Paragraph with ",
                                ),
                            },
                            Object {
                                ann: (),
                                data: Markup {
                                    kind: Bold,
                                    children: [
                                        Object {
                                            ann: (),
                                            data: Plain(
                                                "bold",
                                            ),
                                        },
                                    ],
                                },
                            },
                            Object {
                                ann: (),
                                data: Plain(
                                    ", ",
                                ),
                            },
                            Object {
                                ann: (),
                                data: Link(
                                    Link {
                                        path: LinkPath(
                                            "https://example.com",
                                        ),
                                        target: Uri {
                                            protocol: "https",
                                            path: "//example.com",
                                        },
                                        description: [
                                            Object {
                                                ann: (),
                                                data: Plain(
                                                    "a link",
                                                ),
                                            },
                                        ],
                                        default_description: [],
                                        raw_description: "a link",
                                        description_state: Explicit,
                                        media_kind: Normal,
                                        caption: None,
                                        search: None,
                                        attachment: None,
                                        file: None,
                                    },
                                ),
                            },
                            Object {
                                ann: (),
                                data: Plain(
                                    ", and ",
                                ),
                            },
                            Object {
                                ann: (),
                                data: Timestamp(
                                    Timestamp {
                                        kind: Active,
                                        raw: "<2026-04-30 Thu>",
                                        is_range: false,
                                        start: Some(
                                            TimestampMoment {
                                                year: 2026,
                                                month: 4,
                                                day: 30,
                                                day_name: Some(
                                                    "Thu",
                                                ),
                                                hour: None,
                                                minute: None,
                                            },
                                        ),
                                        end: None,
                                        repeater: None,
                                        warning: None,
                                    },
                                ),
                            },
                            Object {
                                ann: (),
                                data: Plain(
                                    ".\n\n",
                                ),
                            },
                        ],
                    ),
                },
                Element {
                    ann: (),
                    affiliated_keywords: [],
                    data: List(
                        List {
                            list_type: Descriptive,
                            items: [
                                ListItem {
                                    ann: (),
                                    bullet: "- ",
                                    counter: None,
                                    checkbox: Some(
                                        On,
                                    ),
                                    tag: [],
                                    children: [
                                        Element {
                                            ann: (),
                                            affiliated_keywords: [],
                                            data: Paragraph(
                                                [
                                                    Object {
                                                        ann: (),
                                                        data: Plain(
                                                            "item one\n",
                                                        ),
                                                    },
                                                ],
                                            ),
                                        },
                                    ],
                                },
                                ListItem {
                                    ann: (),
                                    bullet: "- ",
                                    counter: None,
                                    checkbox: None,
                                    tag: [
                                        Object {
                                            ann: (),
                                            data: Plain(
                                                "tag ",
                                            ),
                                        },
                                    ],
                                    children: [
                                        Element {
                                            ann: (),
                                            affiliated_keywords: [],
                                            data: Paragraph(
                                                [
                                                    Object {
                                                        ann: (),
                                                        data: Plain(
                                                            "item two\n",
                                                        ),
                                                    },
                                                ],
                                            ),
                                        },
                                    ],
                                },
                            ],
                        },
                    ),
                },
                Element {
                    ann: (),
                    affiliated_keywords: [],
                    data: Block(
                        Block {
                            kind: Source,
                            name: None,
                            language: Some(
                                "rust",
                            ),
                            switches: None,
                            switch_options: BlockSwitches {
                                raw: None,
                                line_numbering: None,
                                preserve_indentation: false,
                                keep_labels: false,
                                remove_labels: false,
                                label_format: None,
                            },
                            line_numbering: None,
                            preserve_indentation: false,
                            lines: [
                                BlockLine {
                                    ann: (),
                                    number: 1,
                                    source: "fn main() {}",
                                    value: "fn main() {}",
                                    normalized_value: "fn main() {}",
                                    value_without_code_ref: "fn main() {}",
                                    normalized_value_without_code_ref: "fn main() {}",
                                    removed_indent: 0,
                                    line_ending: Some(
                                        "\n",
                                    ),
                                    code_ref: None,
                                },
                            ],
                            code_refs: [],
                            parameters: None,
                            header_args: [],
                            value: "fn main() {}\n",
                            children: [],
                        },
                    ),
                },
            ],
            subsections: [],
        },
    ],
    diagnostics: [],
}
